<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BookInfoActivity"
    android:background="#303030">

    <include
        android:id="@+id/toolbar_search"
        layout="@layout/toolbar"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="333dp"
        android:layout_marginTop="56dp"
        android:layout_width="match_parent">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Book Title"
            android:background="#373748"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:padding="10dp"
                android:background="#6f6f90"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="245dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/aa_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="130dp"
                        android:background="@drawable/book_cover_loading"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:id="@+id/aa_info"
                        android:layout_width="70dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:background="#d3d3de"
                        android:text="@string/info"
                        android:padding="5dp"
                        android:textSize="15sp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="5dp"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="2dp"
                        android:background="#000000">
                    </View>
                    <TextView
                        android:id="@+id/tv_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:textSize="15dp"
                        android:text="@string/add_book_to_your_favorites"/>
                    <Button
                        android:id="@+id/aa_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_baseline_favorite_shadow_24"
                        android:gravity="center"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_book_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_title"
                        />

                    <TextView
                        android:id="@+id/aa_book_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_title_from_db"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000000">
                    </View>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        />

                    <TextView
                        android:id="@+id/aa_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_from_db"
                        android:layout_marginLeft="35dp"
                        android:layout_marginStart="35dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        />

                    <TextView
                        android:id="@+id/aa_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author_from_db"
                        android:layout_marginLeft="49dp"
                        android:layout_marginStart="49dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_publish_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_date"
                        />

                    <TextView
                        android:id="@+id/aa_publish_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/publish_date_from_db"
                        android:layout_marginLeft="13dp"
                        android:layout_marginStart="13dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_average_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_rating"
                        />

                    <TextView
                        android:id="@+id/aa_average_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average_rating_from_db"
                        android:layout_marginLeft="1dp"
                        android:layout_marginStart="1dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_ratings_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ratings_count"
                        />

                    <TextView
                        android:id="@+id/aa_ratings_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ratings_count_from_db"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">

                    <TextView
                        android:id="@+id/tv_maturity_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maturity_rating"
                        />

                    <TextView
                        android:id="@+id/aa_maturity_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maturity_rating_from_db"
                        />
                </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#21212c"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/aa_description"
                android:textColor="#fff"
                android:text="@string/book_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>